syntax = "proto3";

option go_package= "./pkg/friend-svc/pb/";

service FriendService {
    rpc FriendRequest (FriendRequestRequest) returns (FriendRequestResponse){};
    rpc FriendList (FriendListRequest) returns (FriendListResponse);
    rpc GetReceivedFriendRequest (GetReceivedFriendRequestRequest) returns (GetReceivedFriendRequestResponse);
    rpc GetSendFriendRequest (GetSendFriendRequestRequest) returns (GetSendFriendRequestResponse);
}

message FriendRequestRequest {
    string UserID =1;
    string FriendID =2;
}

message FriendRequestResponse {
    string FriendsID = 1;
    string UserID =2;
    string Status =4;
    string UpdateAt =5;
}

message FriendListResponseModel {
    string FriendID =1;
    string UpdateAt =2;
    string UniqueFriendsID =4;
}

message FriendListRequest {
    string UserID =1;
    string OffSet =2;
    string Limit=3;
}

message  FriendListResponse {
    repeated FriendListResponseModel Friends = 1;
}

message GetPendingListRequestModel {
    string UserID =1;
    string OffSet =2;
    string Limit=3;
}

message GetPendingListResponseModel {
    string FriendID =1;
    string UpdateAt =2;
    string UniqueFriendsID =3;
}

message GetReceivedFriendRequestRequest {
    GetPendingListRequestModel Received = 1;
}

message GetReceivedFriendRequestResponse {
    repeated GetPendingListResponseModel Received =1;
}

message GetSendFriendRequestRequest {
    GetPendingListRequestModel Send = 1;
}

message GetSendFriendRequestResponse {
    repeated GetPendingListResponseModel Send  =1;
}